Renamed endpoint.
